samples/_failures_safe/1761657298_57aa6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aeb44979.c: In function ‘main’:
./samples/SAFE/__tmp_aeb44979.c:136:16: error: expected ‘)’ at end of input
  136 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_aeb44979.c:136:5: error: expected declaration or statement at end of input
  136 |     if (len > 0
      |     ^~
